fixed width of articles in mobile/tablet viewport stateshifter/tatu-project#64

--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -45,7 +45,9 @@
     }
 }
 
-.post-box:not(.nopic) {
+.post-box {
+    width: 100%;
+    
     .post--header,
     .post--summary,
     .pictureWindow {
